# Project_OOP

./: CMakeLists.txt  README.md  bishop.cpp  king.cpp  king.h  knight.cpp  pawn.cpp  queen.cpp  queen.h  rook.cpp
source_code/: AI_player.cpp  AI_player.h  bishop.cpp  bishop.h  chess_board.h  chess_board_implementation.cpp  chess_game_manager.h  chess_gui.cpp  chess_gui.h  chess_piece.h  chess_piece_implementation.cpp  game_configuration.h  game_mode.h  king.cpp  king.h  knight.h  main_implementation.cpp  move_history.cpp  move_history.h  pawn.cpp  pawn.h  position.h  position_implementation.cpp  rook.cpp  rook.h  texture_manager.cpp  texture_manager.h
source_code/UI/: BoardView.cpp  BoardView.h  GameWindow.cpp  GameWindow.h  HistoryView.cpp  HistoryView.h  TimerView.cpp  TimerView.h  main.cpp
source_code/chess_piece/: king.cpp  knight.cpp  knight.h  pawn.h  queen.cpp  queen.h  rook.h
source_code/include/chess/: Bishop.h  BishopValidator.h  Board.h  CheckState.h  CheckmateState.h  Command.h  ConsoleRenderer.h  Game.cpp  Game.h  GameState.h  King.h  KingValidator.h  Knight.h  KnightValidator.h  MoveCommand.h  MoveValidator.h  Pawn.h  PawnValidator.cpp  PawnValidator.h  Piece.h  PieceFactory.h  PlayingState.h  Position.h  Queen.h  QueenValidator.h  Rook.h  RookValidator.h  UINotifier.h
source_code/include/ui/: ConsoleInputHandler.h  HighlightedRenderer.h  InputHandler.h  Renderer.h  RendererFactory.h
source_code/src/chess/: Bishop.cpp  BishopValidator.cpp  Board.cpp  CheckState.cpp  CheckmateState.cpp  Game.cpp  King.cpp  KingValidator.cpp  Knight.cpp  KnightValidator.cpp  MoveCommand.cpp  Pawn.cpp  PawnValidator.cpp  Piece.cpp  PieceFactory.cpp  PlayingState.h  Queen.cpp  QueenValidator.cpp  Rook.cpp  RookValidator.cpp
source_code/src/main/: Main.cpp
source_code/src/ui/: ConsoleInputHandler.cpp  ConsoleRenderer.cpp  HighlightedRenderer.cpp  Main.cpp  RendererFactory.cpp
source_code/tests/: BoardTest.cpp  PawnValidatorTest.cpp
